--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,21 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: steelblue;
 }
+
+h3 {
+  margin: 0;
+  margin-top: 20px;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
+  font-size: 15px;
+  color: rgb(168, 168, 169);
+  line-height: 22px;
+}
 /* 
 .content {
   height: 100vh;
@@ -90,11 +105,16 @@ u {
 
 .title {
   font-size: 48px;
+  margin-bottom: 20px;
 }
 .title-content {
   font-size: 20px;
   line-height: 30px;
   font-weight: 100;
+}
+.title-paragraph {
+  position: relative;
+  top: 20px;
 }
 
 .layer-picker {
@@ -240,14 +260,47 @@ u {
   overflow: scroll;
 }
 
+/* FIRST SCROLLABLE SECTION */
+.planeOne,
+.planeTwo,
+.planeThree {
+  width: 200px;
+  height: 200px;
+  /* background-color: steelblue; */
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-weight: 100;
+  transform: translateY(25%);
+}
+
+.plane-icon {
+  width: 60px;
+}
+
 .secOne,
 .secThree,
 .secFive {
   position: relative;
   top: 80px;
   width: 100%;
-  height: 500px;
+  height: 400px;
   background-color: #222232;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.title-secOne {
+  position: absolute;
+  top: 46px;
+  color: white;
+  font-size: 32px;
 }
 
 .secTwo,
@@ -257,4 +310,50 @@ u {
   width: 100%;
   height: 500px;
   background-color: #2d2d43;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+/* SECOND SCROLLABLE SECTION */
+.block-a,
+.block-b,
+.block-c {
+  width: 30%;
+  height: 150px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-weight: 100;
+  transform: translateY(25%);
+}
+
+.number {
+  font-size: 80px;
+  color: rgb(84, 164, 218);
+}
+
+.paragraph-secTwo {
+  position: absolute;
+  top: 140px;
+  width: 650px;
+  color: white;
+  text-align: center;
+}
+
+/* SCROLL ANIMATIONS */
+.fade-waiting {
+  /* transform: translate(-50%, 70%) !important; */
+  opacity: 0;
+  transition: all ease-in-out 1800ms;
+}
+
+.fade-in {
+  opacity: 1;
+  /* transform: translate(-50%, 0%) !important; */
 }
