--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: steelblue;
+  background-color: rgb(243, 246, 249);
+  /* background-color: rgb(45, 45, 56); */
 }
 
 h3 {
@@ -69,6 +70,10 @@ u {
   right: 30px;
   z-index: 40;
   display: flex;
+  transition: all ease-in-out 300ms;
+}
+.up {
+  bottom: 200px;
 }
 
 .button-scroll {
@@ -161,7 +166,7 @@ u {
 /* landing style */
 
 .navbar-container {
-  position: absolute;
+  position: fixed;
   display: flex;
   top: 0;
   justify-content: center;
@@ -178,9 +183,11 @@ u {
   max-width: 1200px;
   height: 80px;
   background-color: white;
-  z-index: 30;
+  z-index: 60;
   display: flex;
   align-items: center;
+  left: 50%;
+  transform: translate(-50%, 0);
   border-bottom: 1px solid #ccc;
 }
 
@@ -199,6 +206,8 @@ u {
   justify-content: space-between;
   font-weight: 600;
   z-index: 20;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 
 .comparti {
@@ -218,15 +227,20 @@ u {
 /* SELECTORES */
 .selector {
   width: 100%;
-  height: 80px;
   position: relative;
-  top: 80px;
+  height: 160px;
+  top: 0;
+  align-items: flex-end;
   background-color: rgba(39, 39, 53, 1);
-  z-index: 20;
+  z-index: 15;
   display: flex;
-  align-items: center;
+  padding-bottom: 20px;
   justify-content: center;
   transition: all ease-in-out 300ms;
+}
+
+.selector-two {
+  z-index: 15;
 }
 
 .button-container {
@@ -274,7 +288,7 @@ u {
   position: absolute;
   width: 100%;
   top: 0;
-  transition: all ease-in-out 300ms;
+  transition: all ease-in-out 500ms;
 }
 
 .section-three {
@@ -333,6 +347,8 @@ u {
   top: 46px;
   color: white;
   font-size: 32px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .secTwo,
@@ -376,6 +392,8 @@ u {
   width: 650px;
   color: white;
   text-align: center;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 /* SCROLL ANIMATIONS */
@@ -443,4 +461,22 @@ u {
     padding: 20px;
     top: 210px;
   }
+}
+
+/* MAP THREE */
+#mapThree {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  overflow: hidden;
+}
+
+iframe {
+  position: relative;
+  top: -160px;
+  pointer-events: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  z-index: 0;
 }
