--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: rgb(243, 246, 249);
+  background-color: #222237;
   /* background-color: rgb(45, 45, 56); */
 }
 
@@ -23,11 +23,6 @@ p {
   color: rgb(168, 168, 169);
   line-height: 22px;
 }
-/* 
-.content {
-  height: 100vh;
-  overflow: hidden;
-} */
 
 #with-scroll {
   height: 4000px;
@@ -72,15 +67,19 @@ u {
   display: flex;
   transition: all ease-in-out 300ms;
 }
+.center-buttons {
+  left: 50%;
+}
+
 .up {
-  bottom: 200px;
+  bottom: 120px;
 }
 
 .button-scroll {
   width: 55px;
   height: 55px;
   border-radius: 50px;
-  margin-right: 15px;
+  margin-right: 0;
   transition: all ease-in-out 300ms;
   opacity: 0.5;
 }
@@ -91,11 +90,11 @@ u {
 }
 
 .arrow-down {
-  transform: scale(1);
+  transform: scale(0.8);
   transition: all ease-in-out 300ms;
 }
 .arrow-up {
-  transform: scale(1) rotate(180deg);
+  transform: scale(0.8) rotate(180deg);
   transition: all ease-in-out 300ms;
 }
 
@@ -116,23 +115,22 @@ u {
 
 .title-content {
   z-index: 20;
-  top: 300px;
   max-width: 600px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   color: white;
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 100;
 }
 
 .title {
   font-size: 48px;
   margin-bottom: 20px;
 }
-.title-content {
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 100;
-}
+
 .title-paragraph {
   position: relative;
   top: 20px;
@@ -161,6 +159,20 @@ u {
 
 .layer-picker:hover {
   transform: scale(1.1);
+}
+
+.circle-indicator {
+  width: 10px;
+  height: 10px;
+  z-index: 15;
+  border-radius: 50px;
+  margin-right: 11px;
+}
+.circle-internacionales {
+  background-color: #1941b0;
+}
+.circle-locales {
+  background-color: #7189f1;
 }
 
 /* landing style */
@@ -239,6 +251,18 @@ u {
   transition: all ease-in-out 300ms;
 }
 
+.selector-content {
+  width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.selector-title {
+  font-size: 25px;
+}
+
 .selector-two {
   z-index: 15;
 }
@@ -252,13 +276,14 @@ u {
   color: white;
   font-size: 14px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-left: 20px;
   padding: 10px;
   padding-left: 25px;
   padding-right: 25px;
-  border: 1px solid white;
-  border-radius: 15px;
+  border: 0.5px solid rgba(255, 255, 255, 0.2);
+  border-radius: 30px;
   transition: all ease-in-out 300ms;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
@@ -270,16 +295,74 @@ u {
 }
 
 .button-active {
-  background-color: white;
+  background-color: white !important;
+  font-weight: 400;
   color: rgba(39, 39, 53, 1) !important;
 }
 
 .button:hover {
   cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .section {
   height: 100vh;
+  background-color: #222237;
+}
+
+/* FOOTER INFO */
+.footer-info {
+  width: 100%;
+  background-color: rgb(229, 229, 229);
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  z-index: 15;
+  transition: all ease-in-out 300ms;
+}
+
+.hide-footer {
+  opacity: 0;
+}
+
+.footer-content {
+  width: 50%;
+  height: 100%;
+  position: relative;
+  width: 1200px;
+  display: flex;
+  align-items: center;
+  color: rgb(102, 102, 102);
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.footer-text {
+  max-width: 600px;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+#footer-number {
+  font-size: 50px;
+  font-weight: 600;
+  margin-left: 25px;
+  transition: all ease-in-out 300ms;
+}
+
+.number-color-internacionales {
+  color: #1941b0;
+}
+
+.number-color-locales {
+  color: #7189f1;
+}
+
+.footer-rutas {
+  width: 80px;
+  margin-left: 17px;
+  font-size: 15px;
+  font-weight: 400;
 }
 
 /* SCROLL CONTENT */
@@ -289,6 +372,12 @@ u {
   width: 100%;
   top: 0;
   transition: all ease-in-out 500ms;
+  background-color: #222237;
+}
+
+.section-one {
+  display: flex;
+  align-items: center;
 }
 
 .section-three {
@@ -302,7 +391,7 @@ u {
   top: 0;
   width: 100%;
   height: 100vh;
-  background-color: white;
+  background-color: #222237;
   overflow: scroll;
 }
 
