--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,12 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #222237;
+  
   /* background-color: rgb(45, 45, 56); */
+}
+
+#element::-webkit-scrollbar { 
+  display: none; 
 }
 
 h3 {
