--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,13 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #222237;
-  
+  overflow: hidden;
+
   /* background-color: rgb(45, 45, 56); */
 }
 
-#element::-webkit-scrollbar { 
-  display: none; 
+#element::-webkit-scrollbar {
+  display: none;
 }
 
 h3 {
@@ -409,6 +410,7 @@ u {
   height: 100vh;
   background-color: #222237;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 /* FIRST SCROLLABLE SECTION */
