--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,15 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #222237;
   overflow: hidden;
-
   /* background-color: rgb(45, 45, 56); */
 }
 
-#element::-webkit-scrollbar {
-  display: none;
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
 
 h3 {
@@ -77,7 +80,24 @@ u {
   z-index: 40;
   display: flex;
   transition: all ease-in-out 300ms;
+  color: white;
 }
+
+#arrow-text {
+  opacity: 0;
+  transition: all ease-in-out 300ms;
+}
+
+.ir-al-mapa {
+  position: relative;
+  left: 46px;
+  width: 300px;
+  display: block;
+  top: 10px;
+  opacity: 1 !important;
+  transition: all ease-in-out 300ms;
+}
+
 .center-buttons {
   left: 50%;
 }
@@ -99,6 +119,12 @@ u {
   cursor: pointer;
   opacity: 0.9;
 }
+
+.fix-up {
+  position: fixed;
+  top: 100px;
+}
+
 .remove-arrows {
   display: none;
 }
