--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,13 @@ body {
   overflow: hidden;
   /* background-color: rgb(45, 45, 56); */
 }
-
+.cartodb-logo {
+  display: none !important;
+}
+.leaflet-bottom,
+.leaflet-right {
+  display: none !important;
+}
 body::-webkit-scrollbar {
   width: 0.5em;
 }
@@ -381,7 +387,7 @@ u {
 }
 
 .footer-text {
-  max-width: 600px;
+  max-width: 621px;
   font-size: 16px;
   line-height: 24px;
 }
@@ -402,7 +408,7 @@ u {
 }
 
 .footer-rutas {
-  width: 80px;
+  max-width: 247px;
   margin-left: 17px;
   font-size: 15px;
   font-weight: 400;
@@ -777,6 +783,30 @@ i:hover {
 .grafico-lineas-iguazu-mobile {
   display: none;
   margin: 15px;
+}
+
+/* POPUP */
+/* gives the tooltip a margin from the pointer */
+body > div.cartodb-tooltip {
+  margin-top: 10px !important;
+  margin-left: 10px !important;
+  border-radius: 5px;
+}
+
+/* gives to the tooltip different styles */
+div.cartodb-tooltip-content-wrapper {
+  padding: 10px;
+  max-width: auto;
+  color: black;
+  text-align: left;
+  background-color: #fff !important;
+  border-radius: 5px !important;
+}
+
+/* set styles to the <p> tag of the tooltip */
+div.cartodb-tooltip-content-wrapper p {
+  color: black !important;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* MEDIA QUERIES */
