--- a/css/main.css
+++ b/css/main.css
@@ -794,9 +794,56 @@ body > div.cartodb-tooltip {
   border-radius: 5px;
 }
 
+.title-popup {
+  text-align: left;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+  margin-top: 0px;
+}
+
+.popup-row {
+  display: flex;
+}
+
+#popup-custom {
+  position: relative;
+  top: -3px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  background-color: white;
+  z-index: 100;
+  border: 3px solid white;
+  display: none;
+}
+
+.arribos-popup {
+  margin-left: 25px;
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+.categoria-popup {
+  color: rgba(0, 0, 0, 0.6);
+  font-family: 'Roboto', sans-serif;
+}
+hr {
+  opacity: 0.3;
+}
+
+.close-popup {
+  width: 15px;
+  position: relative;
+  right: -330px;
+  top: 7px;
+}
 /* gives to the tooltip different styles */
 div.cartodb-tooltip-content-wrapper {
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
   max-width: auto;
   color: black;
   text-align: left;
@@ -1085,6 +1132,22 @@ div.cartodb-tooltip-content-wrapper p {
   }
   .secTwo {
     height: 628px;
+  }
+  .footer-content {
+    flex-direction: column;
+  }
+  .footer-info {
+    height: 73px;
+  }
+  .footer-rutas {
+    margin-top: -9px;
+    white-space: nowrap;
+    margin-left: -27px;
+    position: relative;
+    left: 134px;
+    justify-content: center;
+    transform: translateX(-50%);
+    justify-self: center;
   }
 }
 
