--- a/css/main.css
+++ b/css/main.css
@@ -844,8 +844,7 @@ hr {
 }
 /* gives to the tooltip different styles */
 div.cartodb-tooltip-content-wrapper {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   max-width: auto;
   color: black;
   text-align: left;
