--- a/css/main.css
+++ b/css/main.css
@@ -478,6 +478,7 @@ u {
   width: 100%;
   height: 580px;
   display: flex;
+  background-color: #2d2d43;
   align-items: center;
   justify-content: center;
   flex-direction: row;
@@ -613,12 +614,13 @@ i:hover {
 }
 
 .vuelos-internacionales-svg {
-  width: 630px;
+  width: 550px;
   transition: all ease-in-out 300ms;
 }
 
 .vuelos-nacionales-svg {
   width: 530px;
+  margin-bottom: -50px !important;
   transition: all ease-in-out 300ms;
 }
 
@@ -690,7 +692,7 @@ i:hover {
   top: 80px;
   width: 100%;
   height: 600px;
-  background-color: #2d2d43;
+  /* background-color: #2d2d43; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -702,7 +704,7 @@ i:hover {
   position: relative;
   top: 80px;
   width: 100%;
-  height: 1000px;
+  height: 600px;
   background-color: #2d2d43;
   display: flex;
   align-items: center;
@@ -929,8 +931,9 @@ div.cartodb-tooltip-content-wrapper p {
   }
   .vuelos-internacionales-svg {
     position: absolute;
-    top: 0px;
-    max-width: 630px !important;
+    top: 25px;
+    margin-bottom: -103px;
+    max-width: 500px !important;
   }
 
   .vuelos-nacionales-svg {
@@ -995,7 +998,7 @@ div.cartodb-tooltip-content-wrapper p {
 
 @media (max-width: 622px) {
   .secOne {
-    height: 750px;
+    height: 900px;
   }
   .secTwo {
     height: 744px;
@@ -1037,7 +1040,7 @@ div.cartodb-tooltip-content-wrapper p {
     max-width: 311px;
   }
   .secFour {
-    height: 1600px;
+    height: 800px;
   }
 
   .grafico-lineas-iguazu,
@@ -1090,7 +1093,7 @@ div.cartodb-tooltip-content-wrapper p {
     max-width: 364px !important;
   }
   .secFour {
-    height: 1400px;
+    height: 600px;
   }
   .vuelos-internacionales-svg {
     width: 400px;
@@ -1130,7 +1133,7 @@ div.cartodb-tooltip-content-wrapper p {
     height: 1064;
   }
   .secFour {
-    height: 1200px;
+    height: 600px;
   }
   .title-content {
     top: 120px;
@@ -1157,7 +1160,10 @@ div.cartodb-tooltip-content-wrapper p {
     height: 466px;
   }
   .secFour {
-    height: 1100px;
+    height: 600px;
+  }
+  .secOne {
+    height: 800px;
   }
 }
 
