--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,7 @@ u {
   right: 0px;
   display: flex;
   flex-direction: row;
-  width: 210px;
+  width: 150px;
   justify-content: space-between;
   font-weight: 600;
   z-index: 20;
@@ -656,6 +656,13 @@ i:hover {
   margin-left: 38px;
 }
 
+.no-incluyen-rutas {
+  font-size: 16px;
+  width: 270px;
+  padding-left: 35px;
+  margin-top: 5px;
+}
+
 .secOne-title {
   font-size: 30px;
   margin-bottom: 20px;
@@ -685,7 +692,7 @@ i:hover {
 
 .secFour-title {
   font-size: 28px;
-  max-width: 770px;
+  max-width: 838px;
   font-weight: 200;
   color: white;
   margin-bottom: 30px;
